Minor modifications to sincDVR method, still not sure if working correctly.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,8 +11,7 @@
             "program": "${file}",
             "stopOnEntry": false,
             "cwd": "${workspaceFolder}",
-            "juliaEnv": "${command:activeJuliaEnvironment}",
-            "args": ["-i", "smalltest.inp"]
+            "juliaEnv": "${command:activeJuliaEnvironment}"
         }
     ]
 }
